--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,19 @@ html, body {
   box-sizing: border-box;
 }
 .show{
-  visibility: visible;
-  opacity: 1;
+transition: opacity 0.8s ease !important;
+  opacity: 1 !important;
+}
+
+.rotate::before{
+  margin-top: 0px !important;
+  top: 0 ;
+  transform: rotate(-405deg) !important;
+transition: transform 0.8s ease !important;
+}
+.rotate::after{
+  margin-top: 0px !important;
+top: 0;
+transition: transform 0.8s ease !important;
+  transform: rotate(405deg) !important;
 }
